[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = ["."]

[project]
name = "search"
authors = [{name = "Isobel Beasley", email = "isobel.beasley@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">= 3.10"
dependencies = [
    "numpy",
    "pytest==2.5",
    "scikit-learn"
]

#[tool.flit.metadata]
#description-file = "DESCRIPTION.txt" 

[project.urls]
Home = "https://github.com/IJbeasley/HW3-PRIM-MST"